<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editTextCalorieDisplay"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            android:importantForAutofill="no" tools:targetApi="o" android:hint="@string/calorie_count"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textStyle="bold"
            android:textSize="36sp" android:gravity="center_horizontal"/>
    <Button
            android:text="Set goal"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:id="@+id/buttonSetGoal" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextCalorieDisplay"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/buttonPlus200"
            android:textSize="18sp" android:onClick="onSetGoal"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/buttonReset2"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <Button
            android:text="@string/reset"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:id="@+id/buttonReset2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
            android:textSize="18sp" android:onClick="onReset"
            app:layout_constraintTop_toBottomOf="@+id/editTextCalorieDisplay"
            app:layout_constraintBottom_toTopOf="@+id/buttonMinus200"
            app:layout_constraintStart_toEndOf="@+id/buttonSetGoal" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="24dp" android:layout_marginBottom="24dp"/>
    <Button
            android:text="@string/plus_100"
            android:layout_width="0dp"
            android:layout_height="93dp"
            android:id="@+id/buttonPlus100"
            android:textSize="24sp"
            android:onClick="onPlus100"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonPlus50"
            app:layout_constraintEnd_toStartOf="@+id/buttonMinus100" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <Button
            android:text="@string/plus_200"
            android:layout_width="0dp"
            android:layout_height="93dp"
            android:id="@+id/buttonPlus200"
            android:textSize="24sp"
            android:onClick="onPlus200" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonPlus100"
            app:layout_constraintEnd_toStartOf="@+id/buttonMinus200" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/plus_50"
            android:layout_width="0dp"
            android:layout_height="93dp"
            android:id="@+id/buttonPlus50"
            android:textSize="24sp"
            android:onClick="onPlus50"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/buttonMinus50"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <Button
            android:text="@string/minus_200"
            android:layout_width="0dp"
            android:layout_height="93dp"
            android:id="@+id/buttonMinus200"
            android:textSize="24sp"
            android:onClick="onMinus200" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonMinus100"
            app:layout_constraintStart_toEndOf="@+id/buttonPlus200" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/minus_100"
            android:layout_width="0dp"
            android:layout_height="93dp"
            android:id="@+id/buttonMinus100"
            android:textSize="24sp"
            android:onClick="onMinus100" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonMinus50" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/buttonPlus100" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/minus_50"
            android:layout_width="0dp"
            android:layout_height="93dp"
            android:id="@+id/buttonMinus50"
            android:textSize="24sp"
            android:onClick="onMinus50" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/buttonPlus50"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>